# ha-tool

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
ha_tool/: cli.py  client.py  models.py  registry.py
scripts/: install-skill.sh
skills/: ha-tool.md
