[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ha-tool"
version = "0.1.0"
description = "Home Assistant CLI for discovering, querying, and controlling entities over WebSocket"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Zsolt Sz", email = "zsolt@kucko.cc" },
]
keywords = [
    "home-assistant",
    "cli",
    "websocket",
    "automation",
    "smart-home",
    "ai-agents",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "websockets>=13.0",
]

[project.urls]
Homepage = "https://github.com/szsolt/ha-tool"
Repository = "https://github.com/szsolt/ha-tool"
Issues = "https://github.com/szsolt/ha-tool/issues"

[project.scripts]
ha-tool = "ha_tool.cli:main"
